[db] rename location to address
