# doc/swagger/AoL-Teacher.yaml
@@ -6,7 +6,7 @@ info:
 
   contact:
     email: sudhagar@abovecloud9.ai
-  version: 0.0.3
+  version: 0.0.4
 externalDocs:
   description: Find out more about AboveCloud9.AI
   url: https://abovecloud9.ai
@@ -197,6 +197,25 @@ paths:
       summary: Finds centers
       description: Returns all the centers. We may need to optimize by returning the centers that match the search string
       operationId: findCenters
+      parameters:
+        - name: q
+          in: query
+          description: Search string
+          required: false
+          schema:
+            type: string
+        - name: page
+          in: query
+          description: Page number (for pagination)
+          required: false
+          schema:
+            type: integer
+        - name: limit
+          in: query
+          description: Number of items in the response
+          required: false
+          schema:
+            type: integer
       responses:
         '200':
           description: successful operation
@@ -248,9 +267,27 @@ paths:
         - name: q
           in: query
           description: Account names that need to be considered for filter
-          required: true
+          required: false
           schema:
             type: string
+        - name: type
+          in: query
+          description: Account type
+          required: false
+          schema:
+            type: string
+        - name: page
+          in: query
+          description: Page number (for pagination)
+          required: false
+          schema:
+            type: integer
+        - name: limit
+          in: query
+          description: Number of items in the response
+          required: false
+          schema:
+            type: integer
       responses:
         '200':
           description: successful operation
@@ -360,6 +397,25 @@ paths:
       summary: List all products
       description: Returns a list of all available products
       operationId: listProducts
+      parameters:
+        - name: q
+          in: query
+          description: Search string
+          required: false
+          schema:
+            type: string
+        - name: page
+          in: query
+          description: Page number (for pagination)
+          required: false
+          schema:
+            type: integer
+        - name: limit
+          in: query
+          description: Number of items in the response
+          required: false
+          schema:
+            type: integer
       responses:
         '200':
           description: successful operation
@@ -536,15 +592,15 @@ components:
             $ref: '#/components/schemas/DateTime'
         timezone:
           $ref: '#/components/schemas/Timezone'
-        location:
+        address:
           $ref: '#/components/schemas/Address'
         centerId:
           type: integer
           format: int64
           example: 10000000
-        type:
+        mode:
           type: string
-          description: Course delivery type
+          description: Course delivery mode
           example: in-person
           enum:
             - in-person
@@ -567,35 +623,38 @@ components:
             example: 10000000
         autoApprove:
           type: boolean
-    Center: # TBD: Should we have CenterDetail and Center?
+    Center:
       type: object
       properties:
         id:
           type: integer
           format: int64
           example: 20000000
-        extName: # Note: Should avoid using this in the future. Let's start with deprecated
+        # Note: Should avoid using this in the future. DEPRECATED
+        extName:
           type: string
           example: 'L-000001'
         name:
           type: string
           example: 'Happiness Center'
-        location:
+        address:
           $ref: '#/components/schemas/Address'
-        status:
-          type: string
-          description: Center Status
-          example: active
-          enum:
-            - active
-            - inactive
-        type:
-          type: string
-          description: Center Type
-          example: ashram
-          enum:
-            - ashram
-            - temple-of-knowledge
+        # Note: Cross checking whether this is required for v1.
+        # status:
+        #   type: string
+        #   description: Center Status
+        #   example: active
+        #   enum:
+        #     - active
+        #     - inactive
+        # Note: Do not see an usecase for v1
+        # type:
+        #   type: string
+        #   description: Center Type
+        #   example: ashram
+        #   enum:
+        #     - ashram
+        #     - temple-of-knowledge
     Config:
       type: object
       properties:
@@ -655,33 +714,34 @@ components:
         lastName:
           type: string
           example: James
+        email:
+          type: string
+          example: john@email.com
+        phone:
+          type: string
+          example: '********'
         type:
           type: string
           description: User Type
           example: teacher
           enum:
-            - teacher
             - assistant-teacher
-            - organizer
             - member
+            - organizer
+            - student
+            - teacher
             - user
     User:
       type: object
       properties:
-        account:
-          $ref: '#/components/schemas/Account'
+        accountId:
+          type: integer
+          format: int64
+          example: 10000000
         username:
           type: string
           example: theUser
-        email:
-          type: string
-          example: john@email.com
-        password: # TBD - Likely to be removed
-          type: string
-          example: '12345'
-        phone:
-          type: string
-          example: '********'
+
     # HTTP status code indicates whether the request is a success or failure
     # In case of failre, error object will contain the details. In case of success
     # schema defined in the spec above will be returned.
@@ -708,18 +768,20 @@ components:
         - ctype
         - baseProductId
       properties:
-        name:
-          type: string
-          example: "Art of Living Course - Part 1"
+        # Just title is enough. This is an internal field. Commented until integration testing.
+        # extName:
+        #   type: string
+        #   example: "Art of Living Course - Part 1"
         title:
           type: string
           example: "Art of Living Course Part 1 - In person"
         ctype:
           type: string
-          example: "12345"
-        baseProductId:
-          type: string
-          example: "54321"
+          example: "C-12345"
+        # Note: This is not required. Commented until integration testing.
+        # baseProductExtId:
+        #   type: string
+        #   example: "54321"
         durationDays:
           type: number
           format: int
@@ -737,9 +799,6 @@ components:
           type: string
           enum: [In Person, Online, Destination Retreats]
           example: "In Person"
-        isDeleted:
-          type: boolean
-          example: 0
     Product:
       allOf: # Combines the BaseProduct and the inline model
         - $ref: "#/components/schemas/BaseProduct"
